2002-09-19  Richard Williamson   <rjw@apple.com>

        Implemented double and triple click selection.
        
        * khtml/khtml_events.h:
        * khtml/khtml_part.cpp:
        (KHTMLPart::customEvent):
        (KHTMLPart::khtmlMouseDoubleClickEvent):
        (firstSlaveAt):
        (lastSlaveAt):
        (KHTMLPart::khtmlMouseTripleClickEvent):
        * khtml/khtml_part.h:
        * khtml/rendering/render_text.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge mouseUp:]):

2002-09-19  Darin Adler  <darin@apple.com>

	- fixed 3045651 -- null-dereference in DOM::CharacterDataImpl constructor
	setting up text area element

        * khtml/xml/dom_textimpl.cpp: (CharacterDataImpl::CharacterDataImpl):
	Set str to an empty DOMStringImpl instead of to 0. This was easier than
	going around finding all the places that don't like a str of 0.

        * WebCore.pbproj/project.pbxproj: Let PB sort things as it likes.

=== Alexander-24 ===

2002-09-18  Darin Adler  <darin@apple.com>

	- fixed 3037974 -- successful Find does not deselect text field

        * khtml/khtml_part.cpp: (KHTMLPart::checkCompleted):
	Turn off the code that restores the cursor position because we don't
	use the KHTML saveState/restoreState. But we should.

        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::setSelection): Call setFocusNode(0), because on the
	Macintosh, selection and focus are mutually exclusive.
        (DocumentImpl::close): Remove no-longer-needed APPLE_CHANGES.
        (DocumentImpl::setFocusNode): Set focus to the KHTMLView when focus
	is being removed from a particular node. Clear the selection when
	focus is set on a particular node because on the Macintosh, selection
	and focus are mutually exclusive.

        * kwq/KWQKHTMLPartImpl.h: Add set/clearDocumentFocus functions that we can use
	to keep document's idea of focused node in sync. with AppKit's.
        * kwq/KWQKHTMLPartImpl.mm: (KWQKHTMLPartImpl::setDocumentFocus): Added.